--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <body>
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('./sw.js')
+            navigator.serviceWorker.register('./sw.js').then((registration) => {
+            console.log("SW registered: ", registration);
+            })
+            .catch((registrationError) => {
+            console.log("SW registration failed: ", registrationError);
+            });
         }
     </script>
     <script src="./addpwa.js"></script>
