--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('./sw.js').then((registration) => {
+            navigator.serviceWorker.register('./sw.js',{scope:'/'}).then((registration) => {
             console.log("SW registered: ", registration);
             })
             .catch((registrationError) => {
