--- a/index.html
+++ b/index.html
@@ -6,17 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="manifest" href="./manifest.json" />
+
 </head>
 
 <body>
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('./sw.js',{scope:'./test_page'}).then((registration) => {
-            console.log("SW registered: ", registration);
-            })
-            .catch((registrationError) => {
-            console.log("SW registration failed: ", registrationError);
-            });
+            navigator.serviceWorker.register('./sw.js',{scope:'./test_page'})
         }
     </script>
     <script src="./addpwa.js"></script>
