--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('./sw.js',{scope:'./test_page'})
+            navigator.serviceWorker.register('./sw.js')
         }
     </script>
     <script src="./addpwa.js"></script>
